# C-README

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  UPDATE.md  cmake_install.cmake  main.cpp  readme  test
README/: compile-jpg.txt
log/: readme.INFO  readme.eric-PC.eric.log.INFO.20170706-094523.12031  readme.eric-PC.eric.log.INFO.20170717-155859.25772  readme.eric-PC.eric.log.INFO.20170717-160053.25875  readme.eric-PC.eric.log.INFO.20170718-154354.4364
rect/: calculate.h  read.h  util.h
str/: segmentation.h
video/: camera.h.h
